--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -31,6 +31,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: build/
+          asset_path: build/jqp-${{ steps.vars.outputs.tag}}.tar.gz
           asset_name: jqp-${{ steps.vars.outputs.tag}}.tar.gz
           asset_content_type: application/gzip
