Add missing values to the sample configuration file

--- a/sample.config.json
+++ b/sample.config.json
@@ -8,5 +8,6 @@
         "@timestamp": "cyan",
         "level": "magenta",
         "message": "green"
-    }
+    },
+    "fieldKeyColour": "blue"
 }
